Attempt to fix buttons on mobile, gutter width
- Gutter width is now pinned between two values
- Makes scaling cleaner and keeps text standard width
- Buttons are fixed by setting viewport, I need to learn about this

--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@
     --grey4: #bbb;
     --gold: rgb(218, 193, 54);
 
-    --side-gutter-width: 20%;
+    --side-gutter-width: max(2em, calc( (100% - 100ch) / 2));
     --body-max-width: 80em;
     --footer-height: 120px;
     --header-height: 5%;
